specials img overflow fix

--- a/wp-content/themes/mihsa/assets/css/custom.scss
+++ b/wp-content/themes/mihsa/assets/css/custom.scss
@@ -1388,6 +1388,7 @@ section.contact {
 	display: flex;
 	img {
 		margin-inline: auto;
+		max-width: 100%;
 	}
 }
 //Results
